# cam_rad_fusion

./: CMakeLists.txt  package.xml
DATA/: lidar000.pcd  lidar004.pcd  lidar005.pcd  lidar006.pcd  lidar007.pcd  lidar010.pcd  lidar011.pcd  lidar012.pcd  lidar013.pcd  lidar014.pcd  lidar017.pcd  lidar018.pcd  lidar019.pcd  lidar020.pcd  lidar021.pcd  lidar022.pcd  lidar024.pcd  lidar025.pcd  lidar026.pcd  lidar027.pcd  lidar028.pcd  lidar030.pcd  lidar031.pcd  lidar032.pcd  lidar033.pcd  lidar035.pcd  lidar045.pcd  lidar052.pcd  lidar056.pcd  lidar058.pcd  lidar059.pcd  lidar069.pcd  lidar083.pcd  lidar084.pcd  lidar090.pcd  lidar095.pcd  lidar106.pcd  lidar116.pcd  lidar157.pcd  lidar172.pcd  (+42 more)
cfg/: dynamic_params.cfg
config/: params.yaml
include/cam_rad_fusion/: fusion.hpp  global_header.hpp
launch/: fusion.launch
src/: main.cpp  main_dyn.cpp
